plugins/kotlin/idea/tests/testData/checker/codeFragments/startingFromReturn.kt.fragment
<error descr="[RETURN_NOT_ALLOWED]">return</error> a